syntax = "proto3";

package go.micro.srv.GetSmscd;

service Example {
	rpc GetSmscd(Request) returns (Response) {}
	rpc Stream(StreamingRequest) returns (stream StreamingResponse) {}
	rpc PingPong(stream Ping) returns (stream Pong) {}
}

message Message {
	string say = 1;
}

message Request {
	string Mobile =1;
	string Id =2;
	string Text = 3;
}

message Response {
	string Error = 1;
	string Errmsg = 2;
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}
